--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 version: "3"
 services:
+
     app:
         build:
             context: ./
@@ -17,17 +18,24 @@ services:
             - MLFLOW_S3_ENDPOINT_URL=http://minio:9000
             - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
             - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+            - MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI}
+            - MLFLOW_ARTIFACT_ROOT=${MLFLOW_ARTIFACT_ROOT}
+            - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+            - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+
         tty: true
         ports:
-        - 8000:5000
+        - 5000:5000
 
         init: true
         depends_on:
             - minio
             - postgres
+        command: mlflow server --backend-store-uri ${MLFLOW_TRACKING_URI} --default-artifact-root ${MLFLOW_ARTIFACT_ROOT} --host 0.0.0.0
 
     postgres:
-        image: postgres
+        image: postgres:13
+        container_name: postgres
         ports:
             - 5432:5432
         env_file:
@@ -45,10 +53,10 @@ services:
         user: root
 
     pgadmin4:
-        image: dpage/pgadmin4:6
-        #container_name: pgadmin4
+        image: dpage/pgadmin4
+        container_name: pgadmin
         ports:
-            - 8002:80
+            - 80:80
         volumes:
             - pgadmin4_volume:/var/lib/pgadmin
         env_file:
@@ -62,21 +70,24 @@ services:
 
     # S3互換のストレージ
     minio:
-        image: quay.io/minio/minio
+        image: minio/minio:latest
         restart: unless-stopped
         volumes:
             - ./minio:/data
         ports:
             - 9000:9000
             - 9001:9001 # ブラウザ確認用。
+        env_file:
+            - ./.env
         environment:
             MINIO_ROOT_USER: ${MINIO_ROOT_USER}
             MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-        command: server /data --console-address ":9001"
+
+        command: minio server /data --console-address ":9001"
 
     # minioコンテナ起動時にデフォルトのバケットを自動作成する
     defaultbucket:
-        image: minio/mc
+        image: minio/mc:latest
         depends_on:
         - minio
         entrypoint: >
